Adjusted padding top in css to compensate for new delivery notice and stop it from overlapping titles of products and basket pages

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -269,12 +269,12 @@ footer {
     }
 
     .header-container {
-        padding-top: 175px;
+        padding-top: 190px;
     }
 }
 
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 125px;
+        padding-top: 160px;
     }
 }
